--- a/overcloud-without-mergepy.yaml
+++ b/overcloud-without-mergepy.yaml
@@ -790,6 +790,12 @@ resources:
     properties:
       servers: {get_attr: [Compute, attributes, nova_server_resource]}
 
+  ObjectStorageNodesPostDeployment:
+    type: OS::TripleO::ObjectStoragePostDeployment
+    depends_on: ObjectStorageSwiftDeployment
+    properties:
+      servers: {get_attr: [ObjectStorage, attributes, nova_server_resource]}
+
 outputs:
   KeystoneURL:
     description: URL for the Overcloud Keystone service
