Make heat auth_encryption_key random
Currently we have a hard-coded default for auth_encryption_key,
which isn't ideal as it's used as a salt for the DB encryption.

Instead, reference an OS::Heat::RandomString resource so we create
a random key for each deployment.

Change-Id: Ic76b89db17603c114d98d28c01f75cc287fb2e90

--- a/deprecated/overcloud-source.yaml
+++ b/deprecated/overcloud-source.yaml
@@ -475,6 +475,8 @@ resources:
     SubKey: resources.NovaCompute0PassthroughSpecific
     parameters:
         passthrough_config_specific: {get_param: NovaComputeExtraConfig}
+  HeatAuthEncryptionKey:
+    type: OS::Heat::RandomString
   controllerConfig:
     type: OS::Heat::StructuredConfig
     properties:
@@ -561,7 +563,8 @@ resources:
             get_param: HeatPassword
           admin_tenant_name: service
           admin_user: heat
-          auth_encryption_key: unset___________
+          auth_encryption_key:
+            get_resource: HeatAuthEncryptionKey
           db:
             Fn::Join:
               - ''
