Deprecate the old mergepy overcloud templates
This patch moves all the related mergepy templates for the
overcloud into a deprecated directory. The Makefile has
been updated so that overcloud.yaml is still generated
at the top level so this shouldn't break end users.

This is to reduce confusion for new users who are learning the
TripleO heat templates and find the fact that we have two full
implementations very confusing.

Change-Id: I0848aca4dee3e37cb4c6089c5f655ad22ac6c5fd

--- a/deprecated/overcloud-source.yaml
+++ b/deprecated/overcloud-source.yaml
@@ -1,5 +1,4 @@
-description: Nova API,Keystone,Heat Engine and API,Glance,Neutron,Dedicated MySQL
-  server,Dedicated RabbitMQ Server,Group of Nova Computes
+description: Deprecated. Please migrate to use overcloud-without-mergepy instead.
 heat_template_version: 2013-05-23
 parameters:
   AdminPassword:
@@ -416,7 +415,7 @@ resources:
         get_param: RabbitCookieSalt
   NovaCompute0Deployment:
     type: FileInclude
-    Path: nova-compute-instance.yaml
+    Path: deprecated/nova-compute-instance.yaml
     SubKey: resources.NovaCompute0Deployment
     parameters:
         DefaultSignalTransport:
@@ -456,23 +455,23 @@ resources:
             get_param: NeutronL3HA
   NovaCompute0AllNodesDeployment:
     type: FileInclude
-    Path: nova-compute-instance.yaml
+    Path: deprecated/nova-compute-instance.yaml
     SubKey: resources.NovaCompute0AllNodesDeployment
     parameters:
         AllNodesConfig: {get_resource: allNodesConfig}
   NovaCompute0:
     type: FileInclude
-    Path: nova-compute-instance.yaml
+    Path: deprecated/nova-compute-instance.yaml
     SubKey: resources.NovaCompute0
   NovaCompute0Passthrough:
     type: FileInclude
-    Path: nova-compute-instance.yaml
+    Path: deprecated/nova-compute-instance.yaml
     SubKey: resources.NovaCompute0Passthrough
     parameters:
         passthrough_config: {get_param: ExtraConfig}
   NovaCompute0PassthroughSpecific:
     type: FileInclude
-    Path: nova-compute-instance.yaml
+    Path: deprecated/nova-compute-instance.yaml
     SubKey: resources.NovaCompute0PassthroughSpecific
     parameters:
         passthrough_config_specific: {get_param: NovaComputeExtraConfig}
