--- a/puppet/hieradata/controller.yaml
+++ b/puppet/hieradata/controller.yaml
@@ -71,3 +71,21 @@ heat::engine::configure_delegated_roles: false
 heat::engine::trusts_delegated_roles: []
 
 mysql::server::manage_config_file: true
+
+tripleo::loadbalancer::keystone_admin: true
+tripleo::loadbalancer::keystone_public: true
+tripleo::loadbalancer::neutron: true
+tripleo::loadbalancer::cinder: true
+tripleo::loadbalancer::glance_api: true
+tripleo::loadbalancer::glance_registry: true
+tripleo::loadbalancer::nova_ec2: true
+tripleo::loadbalancer::nova_osapi: true
+tripleo::loadbalancer::nova_metadata: true
+tripleo::loadbalancer::nova_novncproxy: true
+tripleo::loadbalancer::mysql: true
+tripleo::loadbalancer::rabbitmq: true
+tripleo::loadbalancer::swift_proxy_server: true
+tripleo::loadbalancer::ceilometer: true
+tripleo::loadbalancer::heat_api: true
+tripleo::loadbalancer::heat_cloudwatch: true
+tripleo::loadbalancer::heat_cfn: true
