--- a/puppet/hieradata/controller.yaml
+++ b/puppet/hieradata/controller.yaml
@@ -1,4 +1,5 @@
 # Hiera data here applies to all controller nodes
+
 nova::api::enabled: true
 nova::conductor::enabled: true
 nova::consoleauth::enabled: true
@@ -28,6 +29,9 @@ redis::port: 6379
 redis::sentinel::master_name: "%{hiera('bootstrap_nodeid')}"
 redis::sentinel::redis_host: "%{hiera('bootstrap_nodeid_ip')}"
 redis::sentinel::notification_script: '/usr/local/bin/redis-notifications.sh'
+
+# keystone
+keystone::roles::admin::email: 'root@localhost'
 
 # service tenant
 glance::api::keystone_tenant: 'service'
@@ -110,6 +114,9 @@ heat::cron::purge_deleted::age: 30
 heat::cron::purge_deleted::age_type: 'days'
 heat::cron::purge_deleted::maxdelay: 3600
 heat::cron::purge_deleted::destination: '/dev/null'
+heat::keystone::domain::domain_name: 'heat_stack'
+heat::keystone::domain::domain_admin: 'heat_stack_domain_admin'
+heat::keystone::domain::domain_admin_email: 'heat_stack_domain_admin@localhost'
 
 # pacemaker
 pacemaker::corosync::cluster_name: 'tripleo_cluster'
