puppet: wire in osfamily hieradata support
This updates all of the puppet roles to use an optional
osfamily hieradata file which can be used to provide
distro specific settings.

Also, updates the controller role to make use of this
new file for setting the rabbitmq package_provider
parameter.

Change-Id: I46417db51b87b82bf276dfcef5647a90c37fb07d

--- a/puppet/ceph-storage-puppet.yaml
+++ b/puppet/ceph-storage-puppet.yaml
@@ -63,6 +63,7 @@ resources:
             - cephstorage
             - ceph_cluster # provided by CephClusterConfig
             - ceph
+            - '"%{::osfamily}"'
             - common
           datafiles:
             common:
