--- a/puppet/swift-storage-puppet.yaml
+++ b/puppet/swift-storage-puppet.yaml
@@ -73,6 +73,7 @@ resources:
           hierarchy:
             - heat_config_%{::deploy_config_name}
             - object
+            - '"%{::osfamily}"'
             - common
           datafiles:
             common:
