--- a/puppet/compute-puppet.yaml
+++ b/puppet/compute-puppet.yaml
@@ -287,6 +287,7 @@ resources:
             - compute
             - ceph_cluster # provided by CephClusterConfig
             - ceph
+            - '"%{::osfamily}"'
             - common
           datafiles:
             common:
