--- a/puppet/controller-puppet.yaml
+++ b/puppet/controller-puppet.yaml
@@ -608,6 +608,7 @@ resources:
             - ceph
             - bootstrap_node # provided by BootstrapNodeConfig
             - all_nodes # provided by allNodesConfig
+            - '"%{::osfamily}"'
             - common
           datafiles:
             common:
