Correct the parameter_defaults section name.
Also, we can actually uncomment this now that heatclient 0.3
has been released.

Change-Id: I0b4ce13f1426c364ea7921596022e5165e025fdb

--- a/overcloud-resource-registry-puppet.yaml
+++ b/overcloud-resource-registry-puppet.yaml
@@ -16,6 +16,5 @@ resource_registry:
   OS::TripleO::AllNodes::SoftwareConfig: puppet/all-nodes-config.yaml
   OS::TripleO::BootstrapNode::SoftwareConfig: puppet/bootstrap-config.yaml
 
-# NOTE(dprince): requires a new release of python-heatclient
-#default_parameters:
-  #EnablePackageInstall: false
+parameter_defaults:
+  EnablePackageInstall: false
