puppet: set heat-user using class parameter
The puppet-heat module just added a new class
parameter to help manage instance_user today in
I44fef59d3ed1f7851d8504855a7ae0d5460fdc84. This
actually broke us because we were setting it manually
via heat_config (puppet doesn't allow two settings).

Change-Id: Ib25e8de8ca3849701d506a5d0c956a6f3317ac8a
Closes-bug: #1429328

--- a/puppet/controller-puppet.yaml
+++ b/puppet/controller-puppet.yaml
@@ -632,6 +632,7 @@ resources:
                 heat::api_cloudwatch::bind_host: {get_input: controller_host}
                 heat::api_cfn::bind_host: {get_input: controller_host}
                 heat::database_connection: {get_input: heat_dsn}
+                heat::instance_user: heat-admin
 
                 # Keystone
                 keystone::admin_token: {get_input: admin_token}
