Use Cinder multibackend by default
Currently Cinder iscsi backend is configured within the DEFAULT section.
Since we aim to support multibackend, this commit puts the iscsi backend
in its own section and enable it by default configuring it properly.
Also adds a parameter which can be used to disable the default backend.

Co-Authored-By: Giulio Fidente <gfidente@redhat.com>

Change-Id: I05fb44b59829c0afa8a6588956a48320f2f65159

--- a/cinder-storage.yaml
+++ b/cinder-storage.yaml
@@ -4,6 +4,10 @@ parameters:
   Image:
     default: overcloud-cinder-volume
     type: string
+  CinderEnableIscsiBackend:
+    default: true
+    description: Whether to enable or not the Iscsi backend for Cinder
+    type: boolean
   CinderISCSIHelper:
     default: tgtadm
     description: The iSCSI helper to use with cinder.
