--- a/puppet/cinder-storage-puppet.yaml
+++ b/puppet/cinder-storage-puppet.yaml
@@ -4,6 +4,10 @@ parameters:
   Image:
     default: overcloud-cinder-volume
     type: string
+  CinderEnableIscsiBackend:
+    default: true
+    description: Whether to enable or not the Iscsi backend for Cinder
+    type: boolean
   CinderISCSIHelper:
     default: tgtadm
     description: The iSCSI helper to use with cinder.
@@ -115,6 +119,7 @@ resources:
             template: sizeM
             params:
               size: {get_param: CinderLVMLoopDeviceSize}
+        cinder_enable_iscsi_backend: {get_param: CinderEnableIscsiBackend}
         cinder_iscsi_helper: {get_param: CinderISCSIHelper}
         rabbit_hosts:
           str_replace:
@@ -148,17 +153,20 @@ resources:
             volume:
               raw_data: {get_file: hieradata/volume.yaml}
               oac_data:
-                cinder::volume::iscsi::iscsi_ip_address: local-ipv4
+                cinder_iscsi_ip_address: local-ipv4
               mapped_data:
                 # Cinder
                 cinder::setup_test_volume::size: {get_input: cinder_lvm_loop_device_size}
-                cinder::volume::iscsi::iscsi_helper: {get_input: cinder_iscsi_helper}
+                cinder_iscsi_helper: {get_input: cinder_iscsi_helper}
                 cinder::database_connection: {get_input: cinder_dsn}
                 cinder::rabbit_hosts: {get_input: rabbit_hosts}
                 cinder::rabbit_userid: {get_input: rabbit_username}
                 cinder::rabbit_password: {get_input: rabbit_password}
+                cinder_enable_iscsi_backend: {get_input: cinder_enable_iscsi_backend}
                 ntp::servers: {get_input: ntp_servers}
                 enable_package_install: {get_input: enable_package_install}
+                snmpd_readonly_user_name: {get_input: snmpd_readonly_user_name}
+                snmpd_readonly_user_password: {get_input: snmpd_readonly_user_password}
 
 outputs:
   hosts_entry:
@@ -168,3 +176,7 @@ outputs:
         params:
           IP: {get_attr: [BlockStorage, networks, ctlplane, 0]}
           HOST: {get_attr: [BlockStorage, name]}
+  nova_server_resource:
+    description: Heat resource handle for the block storage server
+    value:
+      {get_resource: BlockStorage}
