--- a/puppet/controller-puppet.yaml
+++ b/puppet/controller-puppet.yaml
@@ -24,6 +24,10 @@ parameters:
     description: The password for the ceilometer service account.
     type: string
     hidden: true
+  CinderEnableIscsiBackend:
+    default: true
+    description: Whether to enable or not the Iscsi backend for Cinder
+    type: boolean
   CinderISCSIHelper:
     default: tgtadm
     description: The iSCSI helper to use with cinder.
@@ -439,6 +443,7 @@ resources:
         debug: {get_param: Debug}
         cinder_lvm_loop_device_size: {get_param: CinderLVMLoopDeviceSize}
         cinder_password: {get_param: CinderPassword}
+        cinder_enable_iscsi_backend: {get_param: CinderEnableIscsiBackend}
         cinder_iscsi_helper: {get_param: CinderISCSIHelper}
         cinder_dsn:
           list_join:
@@ -602,14 +607,15 @@ resources:
                 tripleo::ringbuilder::build_ring: True
                 # Cinder
                 cinder_lvm_loop_device_size: {get_input: cinder_lvm_loop_device_size}
-                cinder::volume::iscsi::iscsi_helper: {get_input: cinder_iscsi_helper}
-                cinder::volume::iscsi::iscsi_ip_address: {get_input: controller_host}
+                cinder_iscsi_helper: {get_input: cinder_iscsi_helper}
+                cinder_iscsi_ip_address: {get_input: controller_host}
                 cinder::database_connection: {get_input: cinder_dsn}
                 cinder::api::keystone_password: {get_input: cinder_password}
                 cinder::api::keystone_auth_host: {get_input: controller_virtual_ip}
                 cinder::api::bind_host: {get_input: controller_host}
                 cinder::rabbit_userid: {get_input: rabbit_username}
                 cinder::rabbit_password: {get_input: rabbit_password}
+                cinder_enable_iscsi_backend: {get_input: cinder_enable_iscsi_backend}
                 #cinder::debug: {get_input: debug}
                 # Glance
                 glance::api::bind_port: {get_input: glance_port}
