puppet: use identity_uri and auth_uri
This patch updates the puppet modules to use new identity_uri
and auth_uri settings instead of the old 'auth_host' parameters
for keystone auth_token middleware. This avoids some deprecation
warnings in our puppet logs.

Change-Id: I805b28d4135b13eef7082fda78956816c985c323

--- a/puppet/controller-puppet.yaml
+++ b/puppet/controller-puppet.yaml
@@ -486,6 +486,18 @@ resources:
             - - 'mysql://keystone:unset@'
               - {get_param: VirtualIP}
               - '/keystone'
+        keystone_identity_uri:
+          list_join:
+            - ''
+            - - 'http://'
+              - {get_param: VirtualIP}
+              - ':35357/'
+        keystone_auth_uri:
+          list_join:
+            - ''
+            - - 'http://'
+              - {get_param: VirtualIP}
+              - ':5000/v2.0/'
         mysql_innodb_buffer_pool_size: {get_param: MysqlInnodbBufferPoolSize}
         mysql_root_password: {get_param: MysqlRootPassword}
         mysql_cluster_name:
@@ -597,7 +609,8 @@ resources:
                 controller_host: {get_input: controller_host} #local-ipv4
                 # Swift
                 swift::proxy::proxy_local_net_ip: {get_input: controller_host}
-                swift::proxy::authtoken::auth_host: {get_input: controller_virtual_ip}
+                swift::proxy::authtoken::auth_uri: {get_input: keystone_auth_uri}
+                swift::proxy::authtoken::identity_uri: {get_input: keystone_identity_uri}
                 swift::storage::all::storage_local_net_ip: {get_input: controller_host}
                 swift::swift_hash_suffix: {get_input: swift_hash_suffix}
                 swift::proxy::authtoken::admin_password: {get_input: swift_password}
@@ -615,7 +628,8 @@ resources:
                 cinder_iscsi_ip_address: {get_input: controller_host}
                 cinder::database_connection: {get_input: cinder_dsn}
                 cinder::api::keystone_password: {get_input: cinder_password}
-                cinder::api::keystone_auth_host: {get_input: controller_virtual_ip}
+                cinder::api::auth_uri: {get_input: keystone_auth_uri}
+                cinder::api::identity_uri: {get_input: keystone_identity_uri}
                 cinder::api::bind_host: {get_input: controller_host}
                 cinder::rabbit_userid: {get_input: rabbit_username}
                 cinder::rabbit_password: {get_input: rabbit_password}
@@ -624,7 +638,8 @@ resources:
                 # Glance
                 glance::api::bind_port: {get_input: glance_port}
                 glance::api::bind_host: {get_input: controller_host}
-                glance::api::auth_host: {get_input: controller_virtual_ip}
+                glance::api::auth_uri: {get_input: keystone_auth_uri}
+                glance::api::identity_uri: {get_input: keystone_identity_uri}
                 glance::api::registry_host: {get_input: controller_host}
                 glance::api::keystone_password: {get_input: glance_password}
                 # used to construct glance_api_servers
@@ -637,7 +652,8 @@ resources:
                 glance::registry::keystone_password: {get_input: glance_password}
                 glance::registry::database_connection: {get_input: glance_dsn}
                 glance::registry::bind_host: {get_input: controller_host}
-                glance::registry::auth_host: {get_input: controller_virtual_ip}
+                glance::registry::auth_uri: {get_input: keystone_auth_uri}
+                glance::registry::identity_uri: {get_input: keystone_identity_uri}
                 glance::backend::swift::swift_store_auth_address: {get_input: glance_swift_store_auth_address}
                 glance::backend::swift::swift_store_user: service:glance
                 glance::backend::swift::swift_store_key: {get_input: glance_password}
@@ -650,7 +666,8 @@ resources:
                 heat::rabbit_userid: {get_input: rabbit_username}
                 heat::rabbit_password: {get_input: rabbit_password}
                 heat::rabbit_host: {get_input: controller_virtual_ip}
-                heat::keystone_host: {get_input: controller_virtual_ip}
+                heat::auth_uri: {get_input: keystone_auth_uri}
+                heat::identity_uri: {get_input: keystone_identity_uri}
                 heat::keystone_password: {get_input: heat_password}
                 heat::api::bind_host: {get_input: controller_host}
                 heat::api_cloudwatch::bind_host: {get_input: controller_host}
@@ -679,7 +696,8 @@ resources:
                 neutron::rabbit_password: {get_input: rabbit_password}
                 neutron::rabbit_user: {get_input: rabbit_user}
                 #neutron::debug: {get_input: debug}
-                neutron::server::auth_host: {get_input: controller_virtual_ip}
+                neutron::server::auth_uri: {get_input: keystone_auth_uri}
+                neutron::server::identity_uri: {get_input: keystone_identity_uri}
                 neutron::server::database_connection: {get_input: neutron_dsn}
                 neutron::agents::ml2::ovs::enable_tunneling: {get_input: neutron_enable_tunneling}
                 neutron::agents::ml2::ovs::local_ip: {get_input: controller_host}
@@ -709,7 +727,8 @@ resources:
                 ceilometer::rabbit_host: {get_input: controller_virtual_ip}
                 ceilometer::api::host: {get_input: controller_host}
                 ceilometer::api::keystone_password: {get_input: ceilometer_password}
-                ceilometer::api::keystone_host: {get_input: controller_virtual_ip}
+                ceilometer::api::keystone_auth_uri: {get_input: keystone_auth_uri}
+                ceilometer::api::keystone_identity_uri: {get_input: keystone_identity_uri}
                 ceilometer::db::database_connection: {get_input: ceilometer_dsn}
                 ceilometer::agent::auth::auth_password: {get_input: ceilometer_password}
                 snmpd_readonly_user_name: {get_input: snmpd_readonly_user_name}
@@ -717,7 +736,8 @@ resources:
                 # Nova
                 nova::rabbit_userid: {get_input: rabbit_username}
                 nova::rabbit_password: {get_input: rabbit_password}
-                nova::api::auth_host: {get_input: controller_virtual_ip}
+                nova::api::auth_uri: {get_input: keystone_auth_uri}
+                nova::api::identity_uri: {get_input: keystone_identity_uri}
                 nova::api::api_bind_address: {get_input: controller_host}
                 nova::api::metadata_listen: {get_input: controller_host}
                 nova::api::admin_password: {get_input: nova_password}
